Feat: Posibilidad de analizar sentimientos a traves de archivos csv